# NSU-my-lab-C

./: .appveyor.yml  .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  test.ps1  todo.txt
.github/workflows/: cmake.yml
.gitignore/: testCreater.c
src/: Andrew.c  CMakeLists.txt  andrew.c  andrew.h  error.c  error.h  main.c  point.c  point.h  stack.c  stack.h  vector.c  vector.h
test/: CMakeLists.txt  testDriver.c  testlab10.c
